package com.directi.training.isp.exercise_refactored;

public interface IProximityDoor extends Door{
    void proximityCallback();
}
